
SUBDIRS = gbtoolsGUI

noinst_LIBRARIES = libgbtools.a

AM_CPPFLAGS = -g -Wall $(DEPS_CFLAGS)

libgbtools_a_SOURCES = 
libgbtools_a_LIBADD  = gbtoolsGUI/libgbtoolsGUI.a
libgbtools_a_CFLAGS  = 

#bin_PROGRAMS = gbtools
#gbtools_LDADD = libgbtools.a gbtoolsGUI/libgbtoolsGUI.a $(DEPS_LIBS)

# Extra files to remove for the maintainer-clean target.
#
MAINTAINERCLEANFILES = $(top_srcdir)/Makefile.in

