
include $(top_srcdir)/src/Makefile.am.common

SUBDIRS = .

noinst_LTLIBRARIES = libblatSrc.la

libblatSrc_la_SOURCES = \
lib/aliType.c \
lib/annoAssembly.c \
lib/annoFilter.c \
lib/annoFormatTab.c \
lib/annoFormatter.c \
lib/annoGrateWig.c \
lib/annoGrator.c \
lib/annoGratorQuery.c \
lib/annoOption.c \
lib/annoRow.c \
lib/annoStreamBigBed.c \
lib/annoStreamBigWig.c \
lib/annoStreamTab.c \
lib/annoStreamVcf.c \
lib/annoStreamer.c \
lib/apacheLog.c \
lib/asParse.c \
lib/axt.c \
lib/axtAffine.c \
lib/bPlusTree.c \
lib/bamFile.c \
lib/base64.c \
lib/basicBed.c \
lib/bbiRead.c \
lib/bbiWrite.c \
lib/bigBed.c \
lib/binRange.c \
lib/bits.c \
lib/blastOut.c \
lib/blastParse.c \
lib/boxClump.c \
lib/boxLump.c \
lib/bwgCreate.c \
lib/bwgQuery.c \
lib/bwgValsOnChrom.c \
lib/cda.c \
lib/chain.c \
lib/chainBlock.c \
lib/chainConnect.c \
lib/chainToAxt.c \
lib/chainToPsl.c \
lib/cheapcgi.c \
lib/cirTree.c \
lib/codebias.c \
lib/colHash.c \
lib/colHash.h \
lib/common.c \
lib/common.ps \
lib/common.pss \
lib/correlate.c \
lib/crTree.c \
lib/dgRange.c \
lib/diGraph.c \
lib/diGraph.c.97 \
lib/diff \
lib/diffs \
lib/dlist.c \
lib/dnaLoad.c \
lib/dnaMarkov.c \
lib/dnaMotif.c \
lib/dnaMotif.pss \
lib/dnaseq.c \
lib/dnautil.c \
lib/dtdParse.c \
lib/dyOut.c \
lib/dystring.c \
lib/elmTree.c \
lib/emblParse.c \
lib/errAbort.c \
lib/errCatch.c \
lib/fa.c \
lib/ffAli.c \
lib/ffScore.c \
lib/fieldedTable.c \
lib/filePath.c \
lib/fixColor.c \
lib/flydna.c \
lib/fof.c \
lib/foo \
lib/fq.c \
lib/fuzzyShow.c \
lib/gapCalc.c \
lib/gdf.c \
lib/gemfont.c \
lib/gemfont.h \
lib/genomeRangeTree.c \
lib/gfNet.c \
lib/gff.c \
lib/gff3.c \
lib/gfxPoly.c \
lib/gifLabel.c \
lib/gifcodes.h \
lib/gifcomp.c \
lib/gifdecomp.c \
lib/gifread.c \
lib/gifwrite.c \
lib/hacTree.c \
lib/hash.c \
lib/hex.c \
lib/histogram.c \
lib/hmac.c \
lib/hmmPfamParse.c \
lib/hmmstats.c \
lib/htmlPage.c \
lib/htmshell.c \
lib/https.c \
lib/intExp.c \
lib/intValTree.c \
lib/internet.c \
lib/itsa.c \
lib/iupac.c \
lib/jointalign.c \
lib/jpegSize.c \
lib/jsonParse.c \
lib/jsonWrite.c \
lib/keys.c \
lib/knetUdc.c \
lib/kxTok.c \
lib/lineFileOnBigBed.c \
lib/linefile.c \
lib/localmem.c \
lib/log.c \
lib/longToList.c \
lib/maf.c \
lib/maf.doc \
lib/mafFromAxt.c \
lib/mafScore.c \
lib/mailViaPipe.c \
lib/makefile \
lib/md5.c \
lib/memalloc.c \
lib/memgfx.c \
lib/meta.c \
lib/metaWig.c \
lib/mgCircle.c \
lib/mgPolygon.c \
lib/mime.c \
lib/net.c \
lib/nib.c \
lib/nibTwo.c \
lib/nt4.c \
lib/numObscure.c \
lib/obscure.c \
lib/oldGff.c \
lib/oligoTm.c \
lib/options.c \
lib/pairDistance.c \
lib/pairHmm.c \
lib/paraFetch.c \
lib/peakCluster.c \
lib/phyloTree.c \
lib/pipeline.c \
lib/pngwrite.c \
lib/portimpl.c \
lib/portimpl.h \
lib/psGfx.c \
lib/psPoly.c \
lib/pscmGfx.c \
lib/psl.as \
lib/psl.c \
lib/psl.sql \
lib/pslGenoShow.c \
lib/pslShow.c \
lib/pslTbl.c \
lib/pslTransMap.c \
lib/pslWScore.as \
lib/pslWScore.sql \
lib/pthreadDoList.c \
lib/pthreadWrap.c \
lib/qa.c \
lib/quickHeap.c \
lib/quotedP.c \
lib/ra.c \
lib/raToStruct.c \
lib/rainbow.c \
lib/rangeTree.c \
lib/rbTree.c \
lib/regexHelper.c \
lib/repMask.c \
lib/rle.c \
lib/rnautil.c \
lib/rqlEval.c \
lib/rqlParse.c \
lib/rudp.c \
lib/scoreWindow.c \
lib/seg.c \
lib/seqOut.c \
lib/seqStats.c \
lib/servBrcMcw.c \
lib/servCrunx.c \
lib/servcis.c \
lib/servcl.c \
lib/servmsII.c \
lib/servpws.c \
lib/shaRes.c \
lib/slog.c \
lib/snof.c \
lib/snofmake.c \
lib/snofsig.c \
lib/spaceSaver.c \
lib/spacedColumn.c \
lib/spacedSeed.c \
lib/splatAli.as \
lib/splatAli.c \
lib/sqlList.c \
lib/sqlNum.c \
lib/status \
lib/subText.c \
lib/sufa.c \
lib/sufx.c \
lib/synQueue.c \
lib/tabRow.c \
lib/textOut.c \
lib/tokenizer.c \
lib/trix.c \
lib/twoBit.c \
lib/udc.c \
lib/vGfx.c \
lib/vGfxPrivate.h \
lib/vGif.c \
lib/vPng.c \
lib/valgrind.suppress \
lib/vcf.c \
lib/vcfBits.c \
lib/verbose.c \
lib/wildcmp.c \
lib/wormdna.c \
lib/xAli.as \
lib/xAli.c \
lib/xAli.sql \
lib/xa.c \
lib/xap.c \
lib/xenshow.c \
lib/xmlEscape.c \
lib/xp.c \
lib/zlibFace.c \
$(NULL) 

if LINUX
libblatSrc_la_SOURCES += lib/osunix.c
endif

if DARWIN
libblatSrc_la_SOURCES += lib/osunix.c
endif

if CYGWIN
libblatSrc_la_SOURCES += lib/osunix.c
endif

if WINDOWS
libblatSrc_la_SOURCES += lib/oswin9x.c
endif



libblatSrc_la_LDFLAGS  = \
$(OPENSSL_LDFLAGS) \
$(OPENSSL_LIBS) \
$(NULL)

libblatSrc_la_CFLAGS  = \
$(OPENSSL_INCLUDES) \
$(NULL)

# Extra files to remove for the maintainer-clean target.
#
MAINTAINERCLEANFILES = $(top_srcdir)/src/blatSrc/Makefile.in

