
SUBDIRS = .

noinst_LIBRARIES = libgbtoolsGUI.a

AM_CPPFLAGS = -g -Wall $(DEPS_CFLAGS)

libgbtoolsGUI_a_SOURCES = monitor.cpp monitor.hpp
libgbtoolsGUI_a_LIBADD  = 
libgbtoolsGUI_a_CFLAGS  = 

# Extra files to remove for the maintainer-clean target.
#
MAINTAINERCLEANFILES = $(top_srcdir)/gbtoolsGUI/Makefile.in
