
SUBDIRS = .

noinst_LIBRARIES = libgbtoolsGUI.a

AM_CPPFLAGS = -g -Wall $(DEPS_CFLAGS) -I$(top_srcdir)/include

libgbtoolsGUI_a_SOURCES = gbtoolsGUI.cpp
libgbtoolsGUI_a_LIBADD  = 
libgbtoolsGUI_a_CFLAGS  = 

# Extra files to remove for the maintainer-clean target.
#
MAINTAINERCLEANFILES = $(top_builddir)/gbtoolsGUI/Makefile.in
