
nobase_include_HEADERS = \
json/json.h \
json/json-forwards.h \
gbtools/gbtools.hpp \
gbtools/gbtoolsCurl.hpp \
gbtools/gbtoolsTrackhub.hpp \
gbtools/gbtoolsGUI.hpp \
gbtools/gbtoolsPfetch.hpp \
gbtools/gbtoolsUtils.hpp \
$(NULL)

# Extra files to remove for the maintainer-clean target.
#
MAINTAINERCLEANFILES = $(top_builddir)/src/include/Makefile.in


