
nobase_include_HEADERS = \
gbtools/gbtools.hpp \
gbtools/gbtoolsCurl.hpp \
gbtools/gbtoolsTrackhub.hpp \
gbtools/gbtoolsGUI.hpp \
gbtools/gbtoolsPfetch.hpp \
gbtools/gbtoolsUtils.hpp \
json/json.h \
json/json-forwards.h \
blatSrc/ace.h \
blatSrc/aliType.h \
blatSrc/annoAssembly.h \
blatSrc/annoFilter.h \
blatSrc/annoFormatTab.h \
blatSrc/annoFormatter.h \
blatSrc/annoGrateWig.h \
blatSrc/annoGrator.h \
blatSrc/annoGratorQuery.h \
blatSrc/annoOption.h \
blatSrc/annoRow.h \
blatSrc/annoStreamBigBed.h \
blatSrc/annoStreamBigWig.h \
blatSrc/annoStreamTab.h \
blatSrc/annoStreamVcf.h \
blatSrc/annoStreamer.h \
blatSrc/apacheLog.h \
blatSrc/asParse.h \
blatSrc/axt.h \
blatSrc/bPlusTree.h \
blatSrc/bamFile.h \
blatSrc/bandExt.h \
blatSrc/base64.h \
blatSrc/basicBed.h \
blatSrc/bbiFile.h \
blatSrc/bigBed.h \
blatSrc/bigWig.h \
blatSrc/binRange.h \
blatSrc/bits.h \
blatSrc/blastParse.h \
blatSrc/boxClump.h \
blatSrc/boxLump.h \
blatSrc/bwgInternal.h \
blatSrc/cda.h \
blatSrc/cgi_build_rules.mk \
blatSrc/chain.h \
blatSrc/chainBlock.h \
blatSrc/chainConnect.h \
blatSrc/chainToAxt.h \
blatSrc/chainToPsl.h \
blatSrc/cheapcgi.h \
blatSrc/cirTree.h \
blatSrc/codebias.h \
blatSrc/common.h \
blatSrc/common.mk \
blatSrc/correlate.h \
blatSrc/crTree.h \
blatSrc/crudeali.h \
blatSrc/diGraph.h \
blatSrc/diGraph.h.97 \
blatSrc/dlist.h \
blatSrc/dnaLoad.h \
blatSrc/dnaMarkov.h \
blatSrc/dnaMotif.h \
blatSrc/dnaseq.h \
blatSrc/dnautil.h \
blatSrc/dtdParse.h \
blatSrc/dyOut.h \
blatSrc/dystring.h \
blatSrc/elmTree.h \
blatSrc/emblParse.h \
blatSrc/ens.h \
blatSrc/errAbort.h \
blatSrc/errCatch.h \
blatSrc/fa.h \
blatSrc/fieldedTable.h \
blatSrc/filePath.h \
blatSrc/flydna.h \
blatSrc/fof.h \
blatSrc/fq.h \
blatSrc/fuzzyFind.h \
blatSrc/gapCalc.h \
blatSrc/gdf.h \
blatSrc/genoFind.h \
blatSrc/genomeRangeTree.h \
blatSrc/gfClientLib.h \
blatSrc/gfPcrLib.h \
blatSrc/gfWebLib.h \
blatSrc/gff.h \
blatSrc/gff3.h \
blatSrc/gfxPoly.h \
blatSrc/gifLabel.h \
blatSrc/hacTree.h \
blatSrc/hash.h \
blatSrc/hex.h \
blatSrc/hgGene.h \
blatSrc/hgap.h \
blatSrc/hgdb.h \
blatSrc/histogram.h \
blatSrc/hmac.h \
blatSrc/hmmPfamParse.h \
blatSrc/hmmstats.h \
blatSrc/htmlPage.h \
blatSrc/htmshell.h \
blatSrc/https.h \
blatSrc/intValTree.h \
blatSrc/internet.h \
blatSrc/itsa.h \
blatSrc/iupac.h \
blatSrc/jointalign.h \
blatSrc/jpegSize.h \
blatSrc/jsonParse.h \
blatSrc/jsonWrite.h \
blatSrc/keys.h \
blatSrc/knetUdc.h \
blatSrc/kxTok.h \
blatSrc/linefile.h \
blatSrc/localEnvironment.mk \
blatSrc/localmem.h \
blatSrc/log.h \
blatSrc/longToList.h \
blatSrc/maDbRep.h \
blatSrc/maToFf.h \
blatSrc/maf.h \
blatSrc/mailViaPipe.h \
blatSrc/md5.h \
blatSrc/memalloc.h \
blatSrc/memgfx.h \
blatSrc/meta.h \
blatSrc/metaWig.h \
blatSrc/mime.h \
blatSrc/net.h \
blatSrc/nib.h \
blatSrc/nibTwo.h \
blatSrc/nt4.h \
blatSrc/obscure.h \
blatSrc/oldGff.h \
blatSrc/oligoTm.h \
blatSrc/ooc.h \
blatSrc/options.h \
blatSrc/pairDistance.h \
blatSrc/pairHmm.h \
blatSrc/paraFetch.h \
blatSrc/patSpace.h \
blatSrc/peakCluster.h \
blatSrc/phyloTree.h \
blatSrc/pipeline.h \
blatSrc/portable.h \
blatSrc/psGfx.h \
blatSrc/psPoly.h \
blatSrc/pscmGfx.h \
blatSrc/psl.h \
blatSrc/pslTbl.h \
blatSrc/pslTransMap.h \
blatSrc/pthreadDoList.h \
blatSrc/pthreadWrap.h \
blatSrc/qa.h \
blatSrc/quickHeap.h \
blatSrc/quotedP.h \
blatSrc/ra.h \
blatSrc/raToStruct.h \
blatSrc/rainbow.h \
blatSrc/rangeTree.h \
blatSrc/rbTree.h \
blatSrc/regexHelper.h \
blatSrc/repMask.h \
blatSrc/rle.h \
blatSrc/rnautil.h \
blatSrc/rql.h \
blatSrc/rudp.h \
blatSrc/scoreWindow.h \
blatSrc/seg.h \
blatSrc/seqOut.h \
blatSrc/seqStats.h \
blatSrc/shaRes.h \
blatSrc/sig.h \
blatSrc/slog.h \
blatSrc/snof.h \
blatSrc/snofmake.h \
blatSrc/spaceSaver.h \
blatSrc/spacedColumn.h \
blatSrc/spacedSeed.h \
blatSrc/splatAli.h \
blatSrc/splix.h \
blatSrc/sqlList.h \
blatSrc/sqlNum.h \
blatSrc/subText.h \
blatSrc/sufa.h \
blatSrc/sufx.h \
blatSrc/supStitch.h \
blatSrc/synQueue.h \
blatSrc/tabRow.h \
blatSrc/textOut.h \
blatSrc/tokenizer.h \
blatSrc/trans3.h \
blatSrc/trix.h \
blatSrc/twoBit.h \
blatSrc/udc.h \
blatSrc/unfin.h \
blatSrc/userApp.mk \
blatSrc/vGfx.h \
blatSrc/vcf.h \
blatSrc/vcfBits.h \
blatSrc/verbose.h \
blatSrc/wormdna.h \
blatSrc/xAli.h \
blatSrc/xa.h \
blatSrc/xap.h \
blatSrc/xenalign.h \
blatSrc/xmlEscape.h \
blatSrc/xp.h \
blatSrc/zlibFace.h \
$(NULL)

# Extra files to remove for the maintainer-clean target.
#
MAINTAINERCLEANFILES = $(top_builddir)/src/include/Makefile.in


